--- a/homework/build.gradle
+++ b/homework/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     testImplementation group: 'org.testcontainers', name: 'postgresql', version: '1.17.3'
     // https://mvnrepository.com/artifact/org.assertj/assertj-core
     testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.23.1'
+    // Зависимость на JDBC драйвер H2
+    implementation 'com.h2database:h2:1.4.200'
 
 
 
